--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 
         <br>VICTORY: N/A
 
-        <br>STUCKS: Hiring for an accounting assistant. We already have the certificate of no income in the Palawan office -
+        <br>STUCKS: Hiring for an accounting assistant. We already have the certificate of no income in the Palawan
+        office -
         Trisha will go to the city hall today to submit that and get the updated SOA.
         Schedule APE for regular employees with the MEDICard clinic.
 
@@ -35,7 +36,8 @@
 
         <br>TEAM: Awards Team - Passion Pavers
 
-        <br>TEAM CHISMIS: MJ saw an eSports gamer and said that he seemed different in real life compared to how he appeared
+        <br>TEAM CHISMIS: MJ saw an eSports gamer and said that he seemed different in real life compared to how he
+        appeared
         online. Meanwhile, Clarissa is kind of addicted to Bad Bunny because most of her FYP (For You Page) features Bad
         Bunny content.
 
@@ -53,7 +55,8 @@
 
         <br>TEAM: Awards Team - Supreme Achievers
 
-        <br>TEAM CHISMIS: Val bought a new toothbrush after catching her dog chewing her old one. Czar is having difficulty
+        <br>TEAM CHISMIS: Val bought a new toothbrush after catching her dog chewing her old one. Czar is having
+        difficulty
         sleeping because of the TikTok videos about the Epstein files
 
         <br>VICTORY: 1 noms - Joyce, 1 wns - Val
@@ -70,7 +73,8 @@
 
         <br>TEAM: Sales Team
 
-        <br>TEAM CHISMIS: We interviewed a sales intern yesterday, and she passed. We’re excited to have her join the team
+        <br>TEAM CHISMIS: We interviewed a sales intern yesterday, and she passed. We’re excited to have her join the
+        team
         and look forward to working with her during her internship.
 
         <br>VICTORY: None as of the moment
@@ -97,10 +101,71 @@
 
         <br>CLIENT FEEDBACK: None
 
-        <br>ANY REFLECTIONS?: jil is happy that, from being a newbie a few years ago, she's now the one training a newbie.
+        <br>ANY REFLECTIONS?: jil is happy that, from being a newbie a few years ago, she's now the one training a
+        newbie.
         looking back, she's proud of how much she's grown professionally and is extremely grateful for the people she
         works with, and of course, CMG
 
+    </p>
+    <p>
+        DATE AND TIME: 02-10-2026
+
+        <br>TEAM: Marketing & Digital Team
+
+        <br>TEAM CHISMIS: One member of Fridza’s team has resigned. Daily huddle reports are now being automatically
+        recorded in Google Docs, but they are not yet syncing daily with NotebookLM. We reviewed feedback from EAs and
+        Appointment Setters regarding softphone options (Avoxi, Zadarma, Yadaphone, and ViberOut). The results show that
+        Yadaphone and ViberOut are performing well. However, based on further review with ChatGPT, additional testers
+        are needed for ViberOut, which we will conduct over the next two weeks.
+
+        <br>VICTORY: Updated the QSR Media magazine name in the QSR Database to better filter Middle East contacts, as
+        Mailchimp and Zoho cannot filter them accurately. Sent a back issue request for the magazines. Renewed the
+        Facebook access token for overall weekly ad reporting.
+
+        <br>STUCKS: None so far
+
+        <br>CLIENT FEEDBACK: None
+
+        <br>ANY REFLECTIONS?: None
+
+    </p>
+    <p>
+        DATE AND TIME: 02-10-2026
+
+        <br>TEAM: Editorial Team
+
+        <br>TEAM CHISMIS: We re-arranged workstations here following the restructuring we did last month. We
+        congratulate
+        Cath on her regularisation!
+
+        <br>VICTORY: Anlene's promo vid was approved by MADD. ESGBusiness mock-up sent to HODs.
+
+        <br>STUCKS: Jaleen will upload 1 EO today for RA, but there are no responses yet from last week's EO. TDM videos
+        updates. AC Health CEO Shadowing feature has been moved, no final date yet.
+
+        <br>CLIENT FEEDBACK: None
+
+        <br>ANY REFLECTIONS?: Thanks to Misses Nelle, Leih, and GA for the feedback re Cath. I've realised how helpful
+        she
+        is to other departments.
+
+    </p>
+    <p>
+        DATE AND TIME: 02-10-2026
+
+        <br>TEAM: Business Conference Team
+
+        <br>TEAM CHISMIS: palawan team shared they had karaoke after company dinner last friday which was fun, venues
+        for
+        2026 events, push for hiring incl VN office for tele, meeting with Ibnu for ID summit agenda
+
+        <br>VICTORY: none as of now
+
+        <br>STUCKS: AT Summit final remaining slots for speakers panelists annd push for RSVP numbers
+
+        <br>CLIENT FEEDBACK: None
+
+        <br>ANY REFLECTIONS?: None
     </p>
 
 </body>
